[gd_scene load_steps=3 format=3 uid="uid://bdrftkqhl8x3h"]

[ext_resource type="Script" path="res://Scenes/UI/pause_menu.gd" id="1_yq74d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ncba8"]
bg_color = Color(0.27451, 0.27451, 0.27451, 1)
corner_radius_top_left = 24
corner_radius_top_right = 24
corner_radius_bottom_right = 24
corner_radius_bottom_left = 24

[node name="PauseMenu" type="Panel"]
process_mode = 3
custom_minimum_size = Vector2(400, 420)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -210.0
offset_right = 200.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ncba8")
script = ExtResource("1_yq74d")

[node name="Buttons" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(400, 420)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -210.0
offset_right = 200.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResumeButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Resume
"

[node name="LobbyButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Return to lobby"

[node name="SettingsButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
disabled = true
text = "Settings"

[node name="ExitButton" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(200, 48)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Exit
"

[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Buttons/LobbyButton" to="." method="_on_lobby_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
